app/css/homepage.css
html, body {
    font-size: xx-large;
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
}
div {padding: 0;
    margin: 0;}
div.row {
    height: 100%;
    max-height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;

}

#preload-1 { background: url(../images/landing-down-1920.jpg) no-repeat -9999px -9999px; }
#preload-2 { background: url(../images/landing-left-1920.jpg) no-repeat -9999px -9999px; }
#preload-3 { background: url(../images/landing-up-1920.jpg) no-repeat -9999px -9999px; }

#section0 {
    background-color: black;
    background-image: url(../images/landing-down-1920.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    transition: all 1s ease;
}

.picture-tile {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: bottom;
}

.picture-tile:hover {
    color: #2b2b2b;
    cursor: pointer;
}

#projects {
    background-color: #816360ff;
}

#music {
    background-color: #6b712eff;
}

#partita {
    background-color: #6b0e17ff;
}

#cv {
    background-color: #223c78ff;
}

.white-text {
    color: #ffe7c3;
    font-family: 'Corben', cursive;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: xx-large;
}

.clickable-div {
    /* This left intentionally blank */
}

img {object-fit: contain;}

